# Rust_Template

./: Cargo.toml  README.md
.github/workflows/: build.yml  cd.yaml  template_values.toml
crates/PROJ_NAME-core/: Cargo.toml
scripts/: init.sh
