[package]
name = "PROJ_NAME"
version = "0.1.0"
edition.workspace = true
description = """
PROJ_DESC
"""

[workspace.package]
edition = "2021"

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
PROJ_NAME = { path = "PROJ_NAME" }
PROJ_NAME-core = { path = "crates/PROJ_NAME-core" }

[dependencies]
clap = "4.5.1"
tracing.workspace = true
tracing-subscriber.workspace = true
